avoid cursor flickering while dragging

--- a/app/assets/stylesheets/calendar/_common.css.sass
+++ b/app/assets/stylesheets/calendar/_common.css.sass
@@ -142,6 +142,9 @@ $drop_hover: #B2D8AB
     &.comments
       display: none
 
+  .dragging
+    cursor: move
+
 .calendar-description
   color: $ci_darkgrey
   margin: 0.25em 0
